# anti-uav-system

./: .gitignore  CLAUDE.md  README.md  mvp.md  package.xml  setup.cfg  setup.py
config/: ballistics.yaml  sim.yaml  tracker.yaml
docs/: ballistics.md  hud-reference-analysis.md  hud-spec.md  kalman.md  setup.md  tracker.md
launch/: main.launch.py
scripts/: 1_windows_wsl.ps1  2_wsl_setup.sh
solver/: ballistics.py  kalman.py  tracker.py
